--- a/index.css
+++ b/index.css
@@ -70,7 +70,7 @@ ul {
 
 .big-text {
     font-size: 38px;
-    font-weight: extra-bold;
+    font-weight: bolder;
     color: #f9faf8;
 }
 
@@ -79,7 +79,7 @@ ul {
     color: #e5e7eb;
 }
 
-button {
+.sign-up {
     background-color: #3882f6;
     border: none;
     border-radius: 8px;
@@ -87,7 +87,7 @@ button {
     color: white;
 }
 
-button:hover {
+.sign-up:hover {
     cursor: pointer;
 }
 
@@ -100,19 +100,115 @@ button:hover {
 
 .section2 {
     height: 40vh;
+    display: flex;
+    padding: 60px 20vw 90px 20vw;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    box-sizing: border-box;
+    gap: 24px;
+}
+
+.information {
+    color: #1f2937;
+    font-size: 24px;
+    font-weight: bolder;
+}
+
+.cards {
+    display: flex;
+    gap: 12px;
+    justify-content: space-around;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px
+}
+
+.image {
+    border: solid 2px #3882f6 ;
+    border-radius: 8px;
+    width: 80px;
+    height: 80px;
+}
+
+.subtext {
+    font-size: 12px;
+    text-align: center;
 }
 
 .section3 {
-    height: 30vh;
+    height: 35vh;
     background-color: #e5e7eb;
+    display: flex;
+    padding: 90px 25vw 90px 25vw;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.quote {
+    color: #1f2937;
+    font-size: 18px;
+    font-style: italic;
+    font-weight: lighter;
+}
+
+.author {
+    align-self:flex-end;
+    font-weight: bold;
 }
 
 .section4 {
     height: 30vh;
+    padding: 60px 10vw 60px 10vw;
+    box-sizing: border-box;
 }
 
+.bluebox {
+    background-color: #3882f6;
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    box-sizing: border-box;
+    padding: 10px 60px 10px 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.title {
+    font-size: 14px;
+    color: white;
+    font-weight: bold;
+}
+
+.subtitle {
+    font-size: 10px;
+    color: white;
+}
+
+.action-button {
+    border: solid 2px white;
+    border-radius: 8px;
+    padding: 8px 20px;
+    color: white;
+    background-color: #3882f6;
+}
+
+.action-button:hover {
+    cursor: pointer;
+}
 
 .footer {
     height: 8vh;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
